# qt-widgets

./: .clang-format  .gitignore  CMakeLists.txt  README.md  add_widgets.sh  make.sh
cmake/: widgets_list.cmake
form/: QsfMainWindow.cpp  QsfMainWindow.h  QsfTitleBar.cpp  QsfTitleBar.h  QsfToolButton.cpp  QsfToolButton.h  QsrRibbonCore.cpp  QsrRibbonCore.h  README.md  reference.md  uiOffice2016.cpp  uiOffice2016.h
include/: mainwindow.h  ui_mainwindow.h
src/: add_widgets.cpp  mainwindow.cpp  widgets_browser_app.cpp
translations/: cn.qm  zh_CN.ts
widgets/: widgets.h
widgets/angle_panel/: angle_panel.cpp  angle_panel.h
widgets/azimuth_panel/: azimuth_panel.cpp  azimuth_panel.h
widgets/bar/: bar.cpp  bar.h
widgets/battery/: battery.cpp
widgets/editable_label/: editable_label.cpp  editable_label.h
widgets/info_label/: info_label.cpp  info_label.h
widgets/panel/: panel.cpp
widgets/switcher_dual/: switcher_dual.cpp  switcher_dual.h
widgets/title_bar/: title_bar.cpp  title_bar.h
